logs/b6813f24-2862-464e-acf1-f14577a69e43/scenarios/1
  File "main.py", line 38
    print(f"Startup time for browser chrome {end - begin} , {begin} , {end}")
                                                                           ^
SyntaxError: invalid syntax
